--- a/Client/package.json
+++ b/Client/package.json
@@ -4,7 +4,7 @@
   "description": "Collaborative code editor",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
