--- a/Client/package.json
+++ b/Client/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://gitlab.com/IlanSap/haifa-1502-code_harbor#readme",
   "devDependencies": {
     "electron": "^27.1.3"
+  },
+  "dependencies": {
+    "electron-store": "^8.2.0"
   }
 }
